https://github.com/Zemmali-Yasmine/pizzorino_website.git

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pizzorino</title>
     <link rel="icon" href="./Pizza HSR (Chronoupizza).webp" />
     <!-- Lien vers le fichier CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Style.css" />
   </head>
   <body>
     <!-- Barre de navigation avec logo -->
@@ -37,13 +37,14 @@
     <!-- Second Section: About Pizzorino  and Recipes for Krabby Pizzas-->
     <section id="about">
       <h2>À propos de Pizzorino</h2>
-      <p>Chez Pizzorino, nous fusionnons tradition et innovation pour vous
-        offrir des pizzas au feu de bois comme vous n'en avez jamais savourées.
-        Chaque pizza est bien plus qu’un simple plat : c'est une véritable
-        création culinaire, élaborée avec des ingrédients frais et
-        méticuleusement sélectionnés. Nos recettes uniques, nées de notre
-        passion pour l'authenticité et la créativité, vous invitent à explorer
-        des saveurs inédites, conçues pour surprendre et ravir vos papilles.
+      <p>
+        Chez Pizzorino, nous fusionnons tradition et innovation pour vous offrir
+        des pizzas au feu de bois comme vous n'en avez jamais savourées. Chaque
+        pizza est bien plus qu’un simple plat : c'est une véritable création
+        culinaire, élaborée avec des ingrédients frais et méticuleusement
+        sélectionnés. Nos recettes uniques, nées de notre passion pour
+        l'authenticité et la créativité, vous invitent à explorer des saveurs
+        inédites, conçues pour surprendre et ravir vos papilles.
         <br />
         Mais l'expérience Pizzorino ne s'arrête pas là ! Notre personnel dévoué
         et passionné s'engage à créer une ambiance chaleureuse et conviviale, où
