--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="navbar">
           <li><a href="#home">Accueil</a></li>
           <li><a href="#about">À propos de nous</a></li>
-          <li><a href="#recipes">Recettes</a></li>
+          <li><a href="#Pizza">Recettes</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
